<resources>
    <string name="app_name">Spotify</string>

    <!-- LOCALITY -->
    <string name="country">FR</string>

    <!-- AUTHENTICATION -->
    <string name="fb_connect">Connexion avec Facebook</string>
    <string name="or">ou</string>
    <string name="identity">Nom d\'utilisateur ou adresse e-mail</string>
    <string name="pwd">Mot de passe</string>
    <string name="forgot_pwd">Pseudo ou mot de passe oublié ?</string>
    <string name="connect">Connexion</string>

    <!-- MENU -->
    <string name="home">Accueil</string>
    <string name="profile">Profil</string>
    <string name="playlist">Mes librairies</string>
    <string name="logout">Déconnexion</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- ICONS -->
    <string name="fa_icon_home">&#xf015;</string>
    <string name="fa_icon_profile">&#xf007;</string>
    <string name="fa_icon_playlist">&#xf001;</string>
    <string name="fa_icon_logout">&#xf2f5;</string>

    <!-- PLAYLISTS -->
    <string name="sentence_no_playlists">Vous n\'avez aucune librairie enregistrée.</string>
    <string name="available_soon">Disponible prochainement</string>

    <!-- ERROR -->
    <string name="global_error">Une erreur s\'est produite. Veuillez réessayer.</string>
    <string name="no_result">Aucun résultat trouvé.</string>

    <!-- LIST ARTISTS -->
    <string name="followers">Abonnés : </string>

    <!-- PROFILE ARTIST -->
    <string name="top_tracks">Meilleures pistes</string>
    <string name="related_artists">Artistes liés</string>

</resources>
